2005-04-28	Marcelo Mottalli <marcelo@gforgegroup.com>

	* Bug fix: FRS / File deletion displayed an error when trying to delete a file
	and not checking the "I'm sure" checkbox.
	* Bug fix: When reading a news item, the site news were displayed on the
	right panel instead of the project news.

2005-04-27  Christian Bayle <bayle@debian.org>

	* Applied [#1216] httpd.config tweaks and some HTML validation errors
	* Added sys_simple_dns in setup script
	* Applied an equivalent of [#1219] Small fix to setup -- don't process
	backup files

2005-04-27  Marcelo Mottalli <marcelo@gforgegroup.com>

	* Added code for including custom fields in the mail notification for the
	tracker.

2005-04-26  Christian Bayle <bayle@debian.org>
	
	* Added sys_apache_user and sys_apache_group in local.inc
	* Fixed a typo in 20050127-frs-reorg.php (GLOBAL instead of GLOBALS)
	* Added a delete on project_sums_agg to turnaround upgrade bug 
	on 20050224.sql. Closes bug [#1197] 

2005-04-26  Mathieu Peltier  <mathieu.peltier@gmail.com>
	
	* Applied [#1196] www/account/register.php xhtml 1.0 compliant
	patch by Vicente J. Ruiz Jurado
	
2005-04-19  Mathieu Peltier  <mathieu.peltier@gmail.com>
	
	* Integrated ViewCVS PHP wrapper inspired from CVSweb and CodeX'
	ones into scmsvn plugin (task [#550])
	* Changed default SVN backend into fsfs (ViewCVS needs write
	permission with default backend)

2005-04-12  Christian Bayle <bayle@debian.org>
	
	* Added sys_apache_user sys_apache_group vars in local.inc
	and setup with a default value according to your distro (I hope so)

2005-04-10  Mathieu Peltier  <mathieu.peltier@gmail.com>

	* fixed bug [#1111]  FRSFile - Move to other release doesn't work
	right.

2005-03-27  Ognyan Kulev  <ogi@fmi.uni-sofia.bg>

	* docs/docbook/docbook/installation_guide/installation_guide.xml:
	Short section on BIND configuration.
	/var/www/gforge is inside <replaceable> now.

2005-03-25  Tim Perdue <tim@gforge.org>
